tests/negative/test_expr_deref_data_non_ref.orb
data Foo;

fnc main() () {
    let f:(Foo*);
    * f;
};